appId: com.android.settings
---
- launchApp
- tapOn: "Network & internet"
- scroll
- tapOn: "Internet"
